[gd_scene load_steps=5 format=2]

[ext_resource path="res://PauseMenuBackground.png" type="Texture" id=1]
[ext_resource path="res://Fonts/MainMenu.tres" type="DynamicFont" id=2]
[ext_resource path="res://GameOverScreen.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Game_over.mp3" type="AudioStream" id=4]

[node name="GameOverScreen" type="Control" groups=[
"gui",
]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 200.0
margin_right = -200.0
margin_bottom = -200.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 1040.0
margin_bottom = 198.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 1040.0
margin_bottom = 292.0
focus_neighbour_bottom = NodePath("../MainMenu")
focus_next = NodePath("../MainMenu")
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 296.0
margin_right = 1040.0
margin_bottom = 386.0
focus_neighbour_top = NodePath("../Continue")
focus_previous = NodePath("../Continue")
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
